# macaroni

./: Cargo.toml  NEXT.md  README.md  build.zig  build.zig.zon
docs/: sandbox_fs.md
libc_interposition_lib/: Cargo.toml
libc_interposition_lib/src/: lib.rs
libc_interposition_macro/: Cargo.toml
libc_interposition_macro/src/: lib.rs
libmacaroni/: Cargo.toml
libmacaroni/src/: config.rs  cwd.rs  directory.rs  exec.rs  filesystem.rs  lib.rs  open_close.rs  path_remapper.rs  permissions.rs  read_write.rs
libmacaroni/src/vfs/: mod.rs  remap.rs  vfs.rs
libsystem/: Cargo.toml
libsystem/src/: lib.rs
macaronid/: Cargo.toml
macaronid/src/: main.rs
macarun/: Cargo.toml
proto/: Cargo.toml  build.rs
proto/proto/: management.proto  sandbox.proto
proto/src/: lib.rs
src/: PathResolver.zig  config.zig  cwd.zig  dyld.zig  exec.zig  fs.zig  lib.rs  libsystem.zig  root.zig  utils.zig
zig_rewrite/: build.zig.zon
zig_rewrite/src/: PathResolver.zig  cwd.zig  fs.zig  libsystem.zig  root.zig
