[workspace]
members = [
    "libc_interposition_lib",
    "libc_interposition_macro",
    "libmacaroni"
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
libc = "0.2"
bitflags = "2.6.0"
ctor = "0.2.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
nix = "0.29.0"