[package]
name = "libc_interposition_macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }

libc_interposition_lib = { path = "../libc_interposition_lib" }
nix = { workspace = true }