[package]
name = "libmacaroni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = { workspace = true }
ctor = { workspace = true }
bitflags = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
nix = { workspace = true, features = ["process"] }
libc_interposition_lib = { path = "../libc_interposition_lib" }
libc_interposition_macro = { path = "../libc_interposition_macro" }