[package]
name = "macaronid"
version = "0.1.0"
edition = "2021"

[dependencies]
proto = { path = "../proto" }
tonic = "0.12.3"
prost = "0.13.4"
prost-types = "0.13.4"
tonic-reflection = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }